--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -333,3 +333,30 @@ doi = {https://doi.org/10.1016/B978-0-08-050755-2.50061-0},
 url = {https://www.sciencedirect.com/science/article/pii/B9780080507552500610},
 author = {Kelvin Sung and Peter Shirley},
 }
+@article{efficient_csg_meshes,
+title = {Efficient non-incremental constructive solid geometry evaluation for triangular meshes},
+journal = {Graphical Models},
+volume = {97},
+pages = {1-16},
+year = {2018},
+issn = {1524-0703},
+doi = {https://doi.org/10.1016/j.gmod.2018.03.001},
+url = {https://www.sciencedirect.com/science/article/pii/S1524070318300067},
+author = {Bin Sheng and Ping Li and Hongbo Fu and Lizhuang Ma and Enhua Wu},
+keywords = {Boolean operations, Plane-based geometry, CSG evaluation, Hybrid representation},
+}
+@ARTICLE {sbounds_csg,
+author = {S. Cameron},
+journal = {IEEE Computer Graphics and Applications},
+title = {Efficient Bounds in Constructive Solid Geometry},
+year = {1991},
+volume = {11},
+number = {03},
+issn = {1558-1756},
+pages = {68-74},
+keywords = {},
+doi = {10.1109/38.79455},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+month = {may}
+}
